# clotilde

./: .gitignore  README.md  app.spec  clotilde.spec  debug.bat  dj.py  forms.py  main.py  pyproject.toml  setup.py  utils.py  views.py
_internal/static/css/: app.css
_internal/static/js/: app.js
automacoes/: models.py  urls.py  utils.py  views.py
automacoes/migrations/: 0001_initial.py  0002_automacao_porcentagem.py
automacoes/seeu/: apps.py  urls.py  views.py
automacoes/services/: task_intimar_pessoalmente_seeu_011.py
static/css/: style.css
static/js/: app.js  script.js
templates/: base.html  index.html  login.html
templates/includes/: navbar.html
