[project]
name = "clotilde"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Carvalho",email = "igor.carvalho@tjpa.jus.br"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
django = "^5.2.1"
pywebview = "^5.4"
pythonnet = "^3.0.5"
selenium = "^4.32.0"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
coverage = "^7.8.0"
django-debug-toolbar = "^5.2.0"
flake8 = "^7.2.0"
ipython = "^9.2.0"
isort = "^6.0.1"
cx-freeze = "^8.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
