[project]
name = "clotilde"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Carvalho",email = "igor.carvalho@tjpa.jus.br"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
django = "^5.2.1"
django-widget-tweaks = "^1.5.0"
pyinstaller = "^6.13.0"
pythonnet = "^3.0.5"
pywebview = "^5.4"
selenium = "^4.32.0"
webdriver-manager = "^4.0.2"
whitenoise = "^6.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
coverage = "^7.8.1"
django-debug-toolbar = "^5.2.0"
flake8 = "^7.2.0"
ipython = "^9.2.0"
isort = "^6.0.1"

[tool.poetry.group.unix]
optional = true

[tool.poetry.group.unix.dependencies]
pyqtwebengine = "^5.15.7"
qtpy = "^2.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
